syntax = "proto3";

package game_service;

service Game {
    rpc GetState(GetStateRequest) returns (GetStateResponse);
    rpc ApplyAction(ApplyActionRequest) returns (ApplyActionResponse);
}

message GetStateRequest {

}

message GetStateResponse {
    // big fucking response
}

message ApplyActionRequest {
}

message ApplyActionResponse {
}
